--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700&display=swap"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../static/style.css" />
   </head>
 
   <body>
