UPDATE index.html by updating the name of the static files

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700&display=swap"
     /> <!--Include Twitter-like font-->
-    <link rel="stylesheet" href="../static/style.css" /> <!-- Style the page -->
+    <link rel="stylesheet" href="/static/style-index.css" /> <!-- Style the page -->
   </head>
 
   <body>
@@ -24,6 +24,6 @@
       <button type="submit">Submit</button>
     </form>
 
-    <script src="../static/script.js"></script> <!-- Asists with resizing when the screen ration updates-->
+    <script src="/static/script-index.js"></script> <!-- Asists with resizing when the screen ration updates-->
   </body>
 </html>
