UPDATE index.html by linking spinner.css

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700&display=swap"
     /> <!--Include Twitter-like font-->
     <link rel="stylesheet" href="/static/style.css" /> <!-- Style the page -->
+    <link rel="stylesheet" href="/static/spinner.css" /> <!--Style the spinner-->
   </head>
 
   <body>
