--- a/templates/username_existant.html
+++ b/templates/username_existant.html
@@ -1,4 +1,4 @@
-<form hx-post="/submit_username" hx-swap="innerHTML"> <!-- Where the user submits their username again-->
+<form hx-post="/submit_username" hx-swap="innerHTML"> <!-- Where the user waits for the next page to load-->
     <h1>Happening now</h1>
     <h2>Username exists!</h2>
     <div class="spinner"></div>
