--- a/static/spinner.css
+++ b/static/spinner.css
@@ -7,6 +7,14 @@
     animation: spin 1s linear infinite;
 }
 
+.spinner-bird {
+    width: 10vh;
+    height: 10vh;
+    border: none;
+    animation: spin 1s linear infinite;
+    overflow: hidden;
+}
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
