UPDATE index.html to display a downloaded x.com logo instead of a loaded link

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <header>
       <script src="https://unpkg.com/htmx.org@1.8.4"></script>
       <img
-        src="https://portal.jamp.jiji.com/img/icon_Twitter.png"
+        src="../static/images/x.png"
         alt="X Logo"
       /> <!-- Include the X logo -->
       <h2>X Loyalty</h2>
