--- a/templates/index.html
+++ b/templates/index.html
@@ -24,32 +24,7 @@
       <button type="submit" id="submit_button">Submit</button>
       <div class="spinner" style="display: none"></div>
     </form>
-
-    <script>
-      document
-        .getElementById("submit_button")
-        .addEventListener("click", function (event) {
-          // Show only text and the spinner immediately when the button is clicked
-          const form = document.getElementById("username-form");
-          const formChildren = form.children;
-          for (let child of formChildren) {
-            if (
-              child.classList.contains("spinner") ||
-              child.classList.contains("stay")
-            ) {
-              child.style.display = "block"; // Explicitly show spinner and stay elements
-              if (child.id == "message")
-            {
-              const usernameInput = form.querySelector("input[name='username']");
-              usernameText = usernameInput.value;
-              child.innerHTML = "Searching for " + usernameText;
-            }
-            } else {
-              child.style.display = "none"; // Hide everything else
-            }
-          }
-        });
-    </script>
-    <script src="/static/script.js"></script>
+    <script src="/static/scripts/displayOnlySpinnerAndTextOnSubmit.js"></script>
+    <script src="/static/scripts/script.js"></script>
   </body>
 </html>
