--- a/templates/username_inexistant.html
+++ b/templates/username_inexistant.html
@@ -1,5 +1,5 @@
 <form hx-post="/submit_username" hx-swap="innerHTML"> <!-- Where the user submits their username again-->
     <h1>Happening now</h1>
-    <h2>Username doesn't exist!</h2>
+    <h2>Username <strong>{{ username }}</strong> doesn't exist!</h2>
     <img class="spinner-bird" src="{{url_for ('static', filename='images/deadBird.png')}}" alt="Twitter Dead">
 </form>
