--- a/templates/username_existant.html
+++ b/templates/username_existant.html
@@ -1,5 +1,5 @@
-<form hx-post="/submit_username" hx-swap="innerHTML"> <!-- Where the user waits for the next page to load-->
+<form hx-get="/followers_following" hx-swap="innerHTML"> <!-- Where the user waits for the next page to load-->
     <h1>Happening now</h1>
     <h2>Username <strong>{{ username }}</strong> exists!</h2>
-    <div class="spinner"></div>
+    <button type="submit">Get followers/following</button>
 </form>
