--- a/templates/username_existant.html
+++ b/templates/username_existant.html
@@ -1,5 +1,5 @@
-<form hx-get="/followers_following" hx-swap="innerHTML"> <!-- Where the user waits for the next page to load-->
+<form hx-get="/username_sign_in" hx-swap="innerHTML"> <!-- Where the user waits for the next page to load-->
     <h1>Happening now</h1>
     <h2>Username <strong>{{ username }}</strong> exists!</h2>
-    <button type="submit">Get followers/following</button>
+    <button type="submit">Sign in to X</button>
 </form>
