UPDATE username_existant.html to modify button text from "Sign in to get basic statistics" to "Sign In & Get Basic Statistics," improving clarity and consistency in user interface language.

--- a/templates/username_existant.html
+++ b/templates/username_existant.html
@@ -2,5 +2,5 @@
     <h1>Happening now</h1>
     <h2>Username <strong>{{ username }}</strong> exists!</h2>
     <input type="hidden" name="username" value="{{ username }}">
-    <button type="submit">Sign in to get basic statistics</button>
+    <button type="submit">Sign In & Get Basic Statistics</button>
 </form>
