UPDATE basic_statistics.html to include potential loyal users in the statistics display, enhancing the information provided to users.

--- a/templates/basic_statistics.html
+++ b/templates/basic_statistics.html
@@ -1,5 +1,5 @@
 <form hx-post="/get_advanced_statistics" hx-swap="innerHTML">
   <h1 class="stay">Happening now</h1>
-  <h2 class="stay" id="basic_statistics">{{basic_statistics}}</h2>
+  <h2 class="stay" id="basic_statistics">{{basic_statistics}}<br>{{potential_loyal_users}}</h2>
   <button type="submit">Get Advanced Statistics</button>
 </form>
