--- a/templates/basic_statistics.html
+++ b/templates/basic_statistics.html
@@ -1,5 +1,8 @@
 <form hx-post="/get_advanced_statistics" hx-swap="innerHTML">
   <h1 class="stay">Happening now</h1>
   <h2 class="stay" id="basic_statistics">{{basic_statistics}}<br>{{potential_loyal_users}}</h2>
+  <input type="hidden" name="username" value="{{ username }}">
+  <input type="hidden" name="followers" value="{{ followers }}">
+  <input type="hidden" name="following" value="{{ following }}">
   <button type="submit">Get Advanced Statistics</button>
 </form>
