--- a/templates/username_existant.html
+++ b/templates/username_existant.html
@@ -1,6 +1,8 @@
-<form hx-post="/signin_username" hx-swap="innerHTML"> <!-- Where the user waits for the next page to load-->
-    <h1>Happening now</h1>
-    <h2>Username <strong>{{ username }}</strong> exists!</h2>
+<form id="username-form" hx-post="/signin_username" hx-swap="outerHTML"> <!-- Where the user waits for the next page to load-->
+    <h1 class="stay">Happening now</h1>
+    <h2 class="stay">Username <strong>{{ username }}</strong> exists!</h2>
     <input type="hidden" name="username" value="{{ username }}">
-    <button type="submit">Sign In & Get Basic Statistics</button>
+    <div class="spinner" style="display: none"></div>
+    <button type="submit" id="submit_button">Sign In & Get Basic Statistics</button>
+    <script src="/static/scripts/displayOnlySpinnerAndTextOnSubmit.js"></script>
 </form>
