--- a/templates/advanced_statistics.html
+++ b/templates/advanced_statistics.html
@@ -9,6 +9,7 @@
     <script src="https://unpkg.com/htmx.org@1.8.4"></script>
     <link rel="stylesheet" href="/static/style.css" />
     <link rel="stylesheet" href="/static/spinner.css" />
+    <link rel="stylesheet" href="/static/advanced_statistics.css"/>
   </head>
   <body style="flex-direction: column;">
     <header style="height: 5vh; width: 100vw;">
@@ -17,10 +18,10 @@
       <img style=" width: 5vh; height: 5vh;" src="../static/images/x.png" alt="X Logo" />
     </header>
    
-    <div class="usernames" style="border-style:solid; border-color: white; border-width: 0.25vw; border-radius: 0.5vw; height: 81vh; width: 95.5vw; margin-top: 9vh; margin-left: 2vw; ">
-     <button style="background-color: black; color: white; border-width: 0.125vw; border-style: solid; border-color:white; width:auto; height: 5vh;  border-bottom-right-radius: 0.5vw;">Following not followers</button>
-     <button style="background-color: black; color: white; border-width: 0.125vw; border-style: solid; border-color: white; width: auto; height: 5vh; border-bottom-left-radius: 0.5vw;">Followers not following</button>
-     <ul>
+    <div class="usernames">
+     <button style="position: absolute; background-color: black; color: white; width: calc(calc(99.5vw - 6vh) * 0.5); height: 5vh; border-bottom-left-radius: 0.5vw; border-bottom-right-radius: 0.5vw; border-color: white; border-width: 0.5vh; border-style: solid;">Following not followers</button>
+     <button style="position: absolute; background-color: black; color: white; width: calc(calc(99.5vw - 6vh) * 0.5); height: 5vh; border-bottom-left-radius: 0.5vw; border-bottom-right-radius: 0.5vw; border-color: white; border-width: 0.5vh; border-style: solid; left: calc(calc(99.5vw - 6vh) * 0.5);">Followers not following</button>
+     <ul >
       {% for username in following_not_followers %}
         <li>{{ username }}</li>
       {% endfor %}
