--- a/static/advanced_statistics.css
+++ b/static/advanced_statistics.css
@@ -9,3 +9,22 @@
     border-width: 0.25vw; 
     border-radius: 0.5vw; 
 }
+
+button.tab {
+    position: absolute; 
+    background-color: white; 
+    color: black; 
+    width: calc(calc(98.5vw - 6vh) * 0.5); 
+    height: 5vh; 
+    border-radius: 0.5vw;
+    border-color: white; 
+    border-width: 0.5vh; 
+    margin-left: 0.25vw;
+    margin-top: 0.25vw;
+    border-style: solid;
+    font-family: "Libre Franklin", sans-serif; /* keep the twitter font */
+}
+
+button.tab-right {
+    left: calc(calc(99.5vw - 6vh) * 0.5);
+}
