REFINE advanced_statistics.html by adding a class to username display divs, enhancing styling consistency and improving the visual presentation of usernames in the user interface.

--- a/templates/advanced_statistics.html
+++ b/templates/advanced_statistics.html
@@ -23,13 +23,13 @@
      <button class="tab tab-right">Followers not following</button>
      <div class="username-list">
       {% for username in following_not_followers %}
-        <div>{{ username }}</div>
+        <div class="username-node">{{ username }}</div>
       {% endfor %}
      </div>
      
      <div class="username-list">
       {% for username in followers_not_following %}
-        <div>{{ username }}</div>
+        <div class="username-node">{{ username }}</div>
       {% endfor %}
      </div>
     </div>
