--- a/templates/advanced_statistics.html
+++ b/templates/advanced_statistics.html
@@ -19,8 +19,10 @@
     </header>
    
     <div class="usernames">
-     <input class="tab" type="text" placeholder="Following not followers" readonly/>
-     <input class="tab tab-right" type="text" placeholder="Followers not following" readonly/>
+     <input class="tab" type="checkbox" readonly/>
+     <label class="tab">Following not followers</label>
+     <input class="tab tab-right" type="checkbox" placeholder="Followers not following" readonly/>
+     <label class="tab tab-right">Followers not following</label>
 
      
      <div class="username-list">
