ADD cursor pointer style to tab labels in advanced_statistics.css to enhance user interaction and visual feedback.

--- a/static/advanced_statistics.css
+++ b/static/advanced_statistics.css
@@ -37,6 +37,7 @@ label.tab {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 label.tab:hover {
