REFINE advanced_statistics.html and advanced_statistics.css by updating tab inputs to include IDs for better accessibility, and enhancing tab styles for improved  user selection interaction and visual feedback.

--- a/templates/advanced_statistics.html
+++ b/templates/advanced_statistics.html
@@ -19,10 +19,10 @@
     </header>
    
     <div class="usernames">
-     <input class="tab" type="checkbox" readonly/>
-     <label class="tab">Following not followers</label>
-     <input class="tab tab-right" type="checkbox" placeholder="Followers not following" readonly/>
-     <label class="tab tab-right">Followers not following</label>
+     <input class="tab" id="tab1" type="checkbox"/>
+     <label class="tab" for="tab1">Following not followers</label>
+     <input class="tab tab-right" id="tab2" type="checkbox" placeholder="Followers not following"/>
+     <label class="tab tab-right" for="tab2">Followers not following</label>
 
      
      <div class="username-list">
