--- a/static/advanced_statistics.css
+++ b/static/advanced_statistics.css
@@ -1,80 +1,92 @@
 div.usernames {
-    position: absolute; 
-    top: 9vh;  
-    height: 88vh; 
-    width: calc(99.5vw - 6vh); 
-    left: 3vh; 
-    border-style:solid; 
-    border-color: white; 
-    border-width: 0.25vw; 
-    border-radius: 0.5vw; 
+  position: absolute;
+  top: 9vh;
+  height: 88vh;
+  width: calc(99.5vw - 6vh);
+  left: 3vh;
+  border-style: solid;
+  border-color: white;
+  border-width: 0.25vw;
+  border-radius: 0.5vw;
 }
 
 input.tab {
-    position: absolute; 
-    width: calc(calc(97.5vw - 6vh) * 0.5); 
-    height: 4vh; 
-    border-width: 0.5vh; 
-    margin-left: 0.25vw;
-    margin-top: 0.25vw;
+  position: absolute;
+  width: calc(calc(97.5vw - 6vh) * 0.5);
+  height: 4vh;
+  border-width: 0.5vh;
+  margin-left: 0.25vw;
+  margin-top: 0.25vw;
 }
 
 label.tab {
-    border: none;
-    position: absolute; 
-    background-color: white; 
-    color: black; 
-    width: calc(calc(98vw - 6vh) * 0.5); 
-    height: 4vh; 
-    border-radius: 0.5vw;
-    border-color: white; 
-    border-width: 0.5vh; 
-    margin-left: 0.25vw;
-    margin-top: 0.25vw;
-    border-style: solid;
-    font-family: "Libre Franklin", sans-serif; /* keep the twitter font */
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+  border: none;
+  position: absolute;
+  background-color: white;
+  color: black;
+  width: calc(calc(98vw - 6vh) * 0.5);
+  height: 4vh;
+  border-radius: 0.5vw;
+  border-color: white;
+  border-width: 0.5vh;
+  margin-left: 0.25vw;
+  margin-top: 0.25vw;
+  border-style: solid;
+  font-family: "Libre Franklin", sans-serif; /* keep the twitter font */
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 label.tab:hover {
-    background-color: lightgray;
-    border-color: lightgray;
+  background-color: lightgray;
+  border-color: lightgray;
 }
 
 label.tab-right {
-    left: calc(calc(99.25vw - 6vh) * 0.5);
+  left: calc(calc(99.25vw - 6vh) * 0.5);
 }
-
 
 input.tab-right {
-    left: calc(calc(99.25vw - 6vh) * 0.5);
+  left: calc(calc(99.25vw - 6vh) * 0.5);
 }
 
+input.tab:checked + label.tab {
+  background-color: dodgerblue;
+  border-color: dodgerblue;
+  color: white;
+}
+
+input.tab:checked + label.tab:hover {
+    background-color: lightskyblue;
+    border-color: lightskyblue;
+    color: white;
+  }
+
+
+
 div.username-list {
-    position: absolute; 
-    margin-left: 0.25vw; 
-    top: 6vh; 
-    width: calc(98.61vw - 6vh); 
-    height:80.625vh; 
-    border-style: solid; 
-    border-width: 0.25vw; 
-    border-color: dodgerblue; 
-    border-radius: 0.5vw;
+  position: absolute;
+  margin-left: 0.25vw;
+  top: 6vh;
+  width: calc(98.61vw - 6vh);
+  height: 80.625vh;
+  border-style: solid;
+  border-width: 0.25vw;
+  border-color: dodgerblue;
+  border-radius: 0.5vw;
 }
 
 div.username-node {
-    background-color: white;
-    width: calc(2vw + 2vh);
-    height: calc(2vw + 2vh);
-    color: dodgerblue;
-    border-color: dodgerblue;
-    border-style: solid;
-    border-width: 0.25vw;
-    border-radius: calc(1.25vw + 1vh);
-    text-align: center;
+  background-color: white;
+  width: calc(2vw + 2vh);
+  height: calc(2vw + 2vh);
+  color: dodgerblue;
+  border-color: dodgerblue;
+  border-style: solid;
+  border-width: 0.25vw;
+  border-radius: calc(1.25vw + 1vh);
+  text-align: center;
 }
-
