--- a/static/advanced_statistics.css
+++ b/static/advanced_statistics.css
@@ -38,6 +38,7 @@ label.tab {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  font-size: calc(1vh + 1vw);
 }
 
 label.tab:hover {
@@ -91,4 +92,5 @@ div.username-node {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  font-size: calc(1vh + 1vw);
 }
