--- a/templates/advanced_statistics.html
+++ b/templates/advanced_statistics.html
@@ -8,7 +8,6 @@
     />
     <script src="https://unpkg.com/htmx.org@1.8.4"></script>
     <link rel="stylesheet" href="/static/style.css" />
-    <link rel="stylesheet" href="/static/spinner.css" />
     <link rel="stylesheet" href="/static/advanced_statistics.css" />
   </head>
   <body style="flex-direction: column">
@@ -36,7 +35,7 @@
         {% endfor %}
       </div>
     </div>
-    <script src="/static/scripts/script.js"></script>
-    <script src="/static/scripts/node-grid-layout.js"></script>
+    <script src="../static/scripts/script.js"></script>
+    <script src="../static/scripts/node-grid-layout.js"></script>
   </body>
 </html>
