--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     />
     <link rel="stylesheet" href="/static/style.css" />
     <link rel="stylesheet" href="/static/spinner.css" />
+    <link rel="stylesheet" href="/static/advanced_statistics.css" />
   </head>
   <body>
     <header>
