--- a/templates/advanced_statistics.html
+++ b/templates/advanced_statistics.html
@@ -28,12 +28,14 @@
 
       <div class="username-list">
         {% for username in following_not_followers %}
-        <div class="username-node followingNotFollower" >{{ username }}</div>
+        <div class="username-node followingNotFollower"><span>{{ username }}</span></div>
         {% endfor %} 
         {% for username in followers_not_following %}
-        <div class="username-node followerNotFollowing">{{ username }}</div>
+        <div class="username-node followerNotFollowing"><span>{{ username }}</span></div>
         {% endfor %}
       </div>
     </div>
+    
+    <script src="../static/scripts/node-grid-layout.js"></script>
   </body>
 </html>
