UPDATE advanced_statistics.html to add instructional label for user guidance, enhance advanced_statistics.css with new styling for instructions, and modify node-grid-layout.js to toggle instruction visibility based on node display status, improving user experience and layout functionality.

--- a/static/advanced_statistics.css
+++ b/static/advanced_statistics.css
@@ -95,3 +95,17 @@ div.username-node span {
   position: relative;
   top: 44%;
 }
+
+label.instructions {
+  position: absolute;
+  top: 6vh;
+  height: 80.625vh;
+  width: calc(98.61vw - 6vh);
+  text-align: center;
+}
+
+label.instructions span{
+  position: relative;
+  top: 44%;
+  font-size: 5vh;
+}
